# colpali-rag-app

./: .dockerignore  .env copy  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py  test.ipynb
app/storage/: faiss_store.py
dev_tools/: check_and_get_gguf.py  gradio_rag_app.py  hf_local_llm.py  hf_local_llm_llama.py  mock_llm.py  rag_query_local.py
llm/: local_llm.py
prompts/: response_1  response_2
scripts/: create_collection.py  create_faiss_index.py  ingest_local.py
src/app/: settings.py
src/app/api/: dependencies.py  lifespan.py  state.py
src/app/api/endpoints/: pdf_ingest.py  query.py
src/app/colpali/: loaders.py
src/app/services/: img_downloader.py  img_uploader.py
src/app/utils/: prompt_utils.py  qdrant_utils.py
storage/: local_storage.py
