[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "colpali-engine",
    "fastapi[standard]>=0.115.8",
    "instructor>=1.7.2",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.8.0",
    "qdrant-client>=1.13.2",
    "supabase>=2.13.0",
    "tenacity>=9.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
type = [
    "mypy>=1.15.0",
]

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }

[tool.ruff] 
line-length=80

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
